# CTD_KFChess

./: Bishop.h  CMakeLists.txt  King.h  Knight.h  Queen.h  Rook.h  board.cpp  board.h  commands.cpp  commands.h  main.cpp  piece.h
Board/: Board.cpp  BoardParser.hpp  MovementStrategy.cpp  MovementStrategy.hpp  MovementStrategyFactory.cpp  MovementStrategyFactory.hpp
Core/: GameEngine.cpp  GameEngine.hpp  GameLoop.cpp  GameLoop.hpp  main.cpp
Entities/: Piece.hpp
Renderer/: BoardRenderer.cpp  BoardRenderer.hpp
Systems/: CollisionSystem.cpp  CollisionSystem.hpp
include/: Board.hpp  BoardFormatter.hpp  PathValidator.hpp  PendingMove.hpp  Position.hpp
src/: BoardFormatter.cpp  BoardParser.cpp  GameEngine.cpp  PathValidator.cpp  main.cpp
